example/errors/lexer/empty_exponent_float.box
set a: float = 102E;
print("a = " + a as str);
